tests/bad/12_bad_incr_type_21.ris
void main():
    let string a = "foo";
    a++;
    print a;
    return;